--- a/HW1/stylesheet.css
+++ b/HW1/stylesheet.css
@@ -8,6 +8,7 @@ html, body, h1, h2, h3, h4, h5, h6
 h1 
 {
     color: darkslategrey;
+    text-align: center;
 }
 
 /*Background color of webpage*/
@@ -41,3 +42,12 @@ body {
   background-color: brown;
   color: white;
 }
+
+.table {
+  background-color: white;
+}
+
+.table td:hover {
+  background-color:brown;
+  color: white;
+  }
