--- a/HW2/styles.css
+++ b/HW2/styles.css
@@ -7,18 +7,18 @@ html, body, h1, h2, h3, h4, h5, h6
 /*Font coloring for h1 tags*/
 h1 
 {
-    color: darkslategrey;
+    color: black;
     text-align: center;
     border-style: dotted;
-}
-
-/*Hover coloring for h1 tags*/
-h1:hover {
-  background-color: white;
-  color: black;
+    background-color: white;
 }
 
 /*Background color of webpage*/
 body {
     background-color: navajowhite;
+}
+
+#result {
+    background-color: white;
+    border-style: dotted;
 }
