Finished Color Interpolator controller and view

--- a/HW4/Homework4/Homework4/Views/Shared/_Layout.cshtml
+++ b/HW4/Homework4/Homework4/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("RGB Color", "RGB_Color", "Home")</li>
-                    <li>@Html.ActionLink("Color Interpolator", "Color_Interpolator", "Home")</li>
+                    <li>@Html.ActionLink("Color Interpolator", "ColorInterpolator", "ColorInterpolator")</li>
                 </ul>
             </div>
         </div>
