--- a/HW5/Homework5_2/Homework5_2/Views/Home/Create.cshtml
+++ b/HW5/Homework5_2/Homework5_2/Views/Home/Create.cshtml
@@ -34,8 +34,8 @@
     <div class="form-group">
         @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
+            @Html.TextBoxFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger", type="date" })
         </div>
     </div>
 
