--- a/HW5/Homework5_2/Homework5_2/Views/Home/Create.cshtml
+++ b/HW5/Homework5_2/Homework5_2/Views/Home/Create.cshtml
@@ -43,7 +43,7 @@
         @Html.LabelFor(model => model.DueTime, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.DueTime, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.DueTime, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.DueTime, "", new { @class = "text-danger", type="time" })
         </div>
     </div>
 
@@ -66,7 +66,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Priority, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.Priority, new SelectList(ViewBag.PriorityList, "Value", "Text"), htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownListFor(model => model.Priority, new SelectList(ViewBag.PriorityList, "Value", "Text"), " ", htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Priority, "", new { @class = "text-danger" })
         </div>
     </div>
