--- a/HW5/Homework5_2/Homework5_2/Views/Homework/Create.cshtml
+++ b/HW5/Homework5_2/Homework5_2/Views/Homework/Create.cshtml
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control", type ="date" } })
                 @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,7 +42,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DueTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DueTime, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DueTime, new { htmlAttributes = new { @class = "form-control", type = "time" } })
                 @Html.ValidationMessageFor(model => model.DueTime, "", new { @class = "text-danger" })
             </div>
         </div>
