Added more tables, need 1 left & contact name

--- a/HW6/Homework6/Homework6/Views/Home/About.cshtml
+++ b/HW6/Homework6/Homework6/Views/Home/About.cshtml
@@ -1,17 +1,17 @@
 ﻿@model IEnumerable<Homework6.Models.ViewModels.StockItemViewModel>
 
-    <style>
-        .tableStyle {
-            border-style: ridge;
-            border-color: grey;
-            background-color: lightgray;
-            padding-bottom: 10px;
-        }
+<style>
+    .tableStyle {
+        border-style: ridge;
+        border-color: grey;
+        background-color: lightgray;
+        padding-bottom: 10px;
+    }
 
-        .StockInfo {
-            font-size: 35px;
-        }
-    </style>
+    .StockInfo {
+        font-size: 35px;
+    }
+</style>
 
 <br />
 <div class="container">
@@ -62,4 +62,69 @@
         }
     </div>
 
+    <br />
+    <div class="row">
+
+        @foreach (var item in Model)
+        {
+            if (item.SupplierName != null || item.SupplierName != "")
+            {
+                <div class="col-md-7 tableStyle">
+
+                    <h4 class="StockInfo"> Supplier Profile </h4>
+                    <hr />
+
+                    <div class="col-md-4">
+                        Company: <br /> Phone: <br /> Fax: <br /> Website: <br /> Contact:
+                    </div>
+                    <div class="col-md-4" style="width:300px">
+                        @Html.DisplayFor(modelItem => item.SupplierName)
+                        <br />
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                        <br />
+                        @Html.DisplayFor(modelItem => item.FaxNumber)
+                        <br />
+                        @Html.ActionLink(item.WebsiteURL, item.WebsiteURL)
+                        <br />
+                        @Html.DisplayFor(modelItem => item.SupplierID)
+                    </div>
+                </div>
+            }
+        }
+    </div>
+    <br />
+
+    <br />
+    <div class="row">
+
+        @foreach (var item in Model)
+        {
+            if (item.SupplierName != null || item.SupplierName != "")
+            {
+                <div class="col-md-7 tableStyle">
+
+                    <h4 class="StockInfo"> Sales History Summary </h4>
+                    <hr />
+
+                    <div class="col-md-4">
+                        Orders: <br /> Gross Sales: <br /> Gross Profit: <br />
+                    </div>
+                    <div class="col-md-4" style="width:300px">
+                        @Html.DisplayFor(modelItem => item.Orders)
+                        <br />
+                        @{<text>$</text>}
+                        @{ string output3 = string.Format("{0:0,0.00}", item.GrossSales); }
+                        @output3
+                        <br />
+                        @{<text>$</text>}
+                        @{ string output4 = string.Format("{0:0,0.00}", item.GrossProfit); }
+                        @output4
+                    </div>
+                </div>
+            }
+        }
+    </div>
+    <br />
+
 </div>
+
