One table left to do, got rid of hard-coded vals

--- a/HW6/Homework6/Homework6/Views/Home/About.cshtml
+++ b/HW6/Homework6/Homework6/Views/Home/About.cshtml
@@ -86,7 +86,7 @@
                         <br />
                         @Html.ActionLink(item.WebsiteURL, item.WebsiteURL)
                         <br />
-                        @Html.DisplayFor(modelItem => item.SupplierID)
+                        @Html.DisplayFor(modelItem => item.FullName)
                     </div>
                 </div>
             }
