--- a/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
+++ b/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
@@ -15,14 +15,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Add Athlete", "Create", "Athletes")</li>
+                    <li>@Html.ActionLink("Add Location/Date", "Create", "Meets")</li>
+                    <li>@Html.ActionLink("Add Event", "Create", "EventAthleteResults")</li>
+
                 </ul>
             </div>
         </div>
