Finished feature 2 (table list)

--- a/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
+++ b/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Search Students", "StudentResult", "Home")</li>
                     <li>@Html.ActionLink("Add Athlete", "Create", "Athletes")</li>
                     <li>@Html.ActionLink("Add Location/Date", "Create", "Meets")</li>
                     <li>@Html.ActionLink("Add Event", "Create", "EventAthleteResults")</li>
