--- a/HW8/Homework8/Homework8/Views/EventAthleteResults/Create.cshtml
+++ b/HW8/Homework8/Homework8/Views/EventAthleteResults/Create.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create an Event Result</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>EventAthleteResult</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -56,7 +54,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Go to List", "Index")
 </div>
 
 @section Scripts {
