Added feature 3, finished project

--- a/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
+++ b/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
@@ -16,11 +16,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Search Students", "StudentResult", "Home")</li>
+                    <li>@Html.ActionLink("Show Graph", "Graph", "Home")</li>
                     <li>@Html.ActionLink("Add Athlete", "Create", "Athletes")</li>
                     <li>@Html.ActionLink("Add Location/Date", "Create", "Meets")</li>
                     <li>@Html.ActionLink("Add Event", "Create", "EventAthleteResults")</li>
