Made graph dynamic on-click and removes previous results. Finished w assignment

--- a/HW8/Homework8/Homework8/Views/Home/Graph.cshtml
+++ b/HW8/Homework8/Homework8/Views/Home/Graph.cshtml
@@ -5,9 +5,11 @@
 
 <div id="teamList"></div>
 <br />
-<div id="athleteList"></div>
+<div id="athleteListOutside">
+<div id="athleteList"></div> </div>
 <br />
-<div id="eventList"></div>
+<div id="eventListOutside">
+<div id="eventList"></div> </div>
 
 <div class="row">
     <div class="col-lg-12">
