Edited some css on athlete graph, done.

--- a/HW8/Homework8/Homework8/Views/Home/Graph.cshtml
+++ b/HW8/Homework8/Homework8/Views/Home/Graph.cshtml
@@ -1,5 +1,18 @@
 ﻿@model IEnumerable<Homework8.Models.ViewModels.DropDownViewModel>
 
+<style>
+    button {
+    border-radius: 20px;
+    color: black;
+    font-size: 15px;
+    
+}
+    button:hover {
+    background-color: orange;
+}
+
+</style>
+
 <h1 style="text-align:center; border:groove; border-width: 7px; border-radius: 20px;">Athlete Progess</h1>
 <h3>Select a team, athlete, and event to see how an athlete has done over time:</h3>
 
